--- a/scrap_v2.ipynb
+++ b/scrap_v2.ipynb
@@ -3,10 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6918e359",
+   "id": "97e05556",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd \n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.support.ui import WebDriverWait\n",
     "from selenium.webdriver.common.by import By\n",
@@ -21,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96b15e54",
+   "id": "604f31fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8139101",
+   "id": "4ab8dfff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98ef0c0d",
+   "id": "0a72d18b",
    "metadata": {
     "scrolled": true
    },
@@ -81,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76fb8db2",
+   "id": "6af946e7",
    "metadata": {
     "scrolled": false
    },
@@ -95,25 +96,63 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "426dcaa2",
+   "id": "5f7824e3",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "#loop results in nonetype\n",
-    "\n",
-    "#xpaths = []\n",
-    "\n",
-    "#for loc in loc_names:\n",
-    "    #xpaths = print(f\"//a[@aria-label='Store details for {loc}']//*[name()='svg']\")"
+    "address_info = soup.findAll('p', attrs = {'data-e2e' : \"address\"})\n",
+    "address_info"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "346dfa5c",
+   "id": "d485757c",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "#create list to store location names\n",
+    "loc_address = [loc.text for loc in address_info]\n",
+    "loc_address"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3dc5b783",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "starbucks = pd.DataFrame()\n",
+    "starbucks['location'] = loc_names\n",
+    "starbucks['address'] = loc_address\n",
+    "starbucks['address_new'] = starbucks['address'] + ',TN'\n",
+    "starbucks.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c4f7cd0",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "starbucks.to_csv('starbucks_locs.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0673205",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "#list comprehension \n",
@@ -124,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bb9187c",
+   "id": "c6ae9523",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6748680a",
+   "id": "92e10e3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e070929c",
+   "id": "4cb7f57e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da9b4b66",
+   "id": "b182ac49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9458dbaa",
+   "id": "f653510a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a97af47",
+   "id": "45b88acb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5504d7a6",
+   "id": "9df08051",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1efa53fe",
+   "id": "23a67602",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +265,7 @@
     "        #get page source \n",
     "        current_page = browser.page_source\n",
     "        #get soup of page\n",
-    "        soup2 = BeautifulSoup(current_page, 'html.parser')\n",
+    "        soup2 = BeautifulSoup(current_page)\n",
     "        #find container in soup and place in list\n",
     "        container_soup = soup2.find('section', attrs = {'class' : 'pb5 px4 lg-px6'})\n",
     "        big_soup.append(container_soup)\n",
@@ -243,8 +282,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87673f6b",
-   "metadata": {},
+   "id": "5f2ca7bb",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "big_soup"
@@ -253,7 +294,68 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a8adc6a",
+   "id": "ffab5724",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loc_name = big_soup[0].findAll('h1', attrs = {'class' : \"sb-heading text-lg text-bold pr7 mb1\"})\n",
+    "loc_name\n",
+    "loc_street = big_soup[0].findAll('span', attrs = {'class' : \"block\"})\n",
+    "loc_street[0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e9edeb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pull out information\n",
+    "loc_names = []\n",
+    "loc_address = []\n",
+    "\n",
+    "\n",
+    "for container in big_soup:\n",
+    "    names = container.findAll('h1', attrs = {'class': \"sb-heading text-lg text-bold pr7 mb1\"})\n",
+    "    loc_names.append(names)\n",
+    "    address = container.findAll('span', attrs = {'class' : \"block\"})\n",
+    "    loc_address.append(address)\n",
+    "    \n",
+    "loc_address\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "8e0a7caa",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_23864\\1945022446.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mstretch_starbucks\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mstretch_starbucks\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'location'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mloc_names\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mstretch_starbucks\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'address'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mloc_address\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mstretch_starbucks\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "stretch_starbucks = pd.DataFrame()\n",
+    "stretch_starbucks['location'] = loc_names\n",
+    "stretch_starbucks['address'] = loc_address\n",
+    "stretch_starbucks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a325ff62",
    "metadata": {},
    "outputs": [],
    "source": []
