--- a/Census_Poverty.ipynb
+++ b/Census_Poverty.ipynb
@@ -35,8 +35,8 @@
     }
    ],
    "source": [
-    "poverty = pd.read_csv('../data/census_pov.csv')\n",
-    "poverty.shape"
+    "pop = pd.read_csv('../data/census_pov.csv')\n",
+    "pop.shape"
    ]
   },
   {
@@ -128,8 +128,9 @@
     }
    ],
    "source": [
-    "poverty['GEO_ID'] = poverty['GEO_ID'].str.split(',', expand = True)\n",
-    "poverty.head()"
+    "pop['GEO_ID'] = pop['GEO_ID'].str.split(',', expand = True)\n",
+    "pop.head()\n",
+    "pop.rename(columns={'' : 'incident_count'})"
    ]
   },
   {
@@ -139,7 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "poverty.to_csv(r'C:\\Users\\16293\\Documents\\NSS\\Python\\Capstone\\poverty.csv')\n"
+    "pop.to_csv(r'C:\\Users\\16293\\Documents\\NSS\\Python\\Capstone\\pop.csv')\n"
    ]
   }
  ],
