--- a/crime_cleanup.ipynb
+++ b/crime_cleanup.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c386021c",
+   "execution_count": 1,
+   "id": "10deb7fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,10 +14,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "75827218",
+   "execution_count": 2,
+   "id": "7b19ccc3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "946216"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "crime = pd.read_csv('..\\data\\police_incidents.csv')\n",
     "len(crime)"
@@ -26,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfd1c51f",
+   "id": "54bc61c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50aef618",
+   "id": "057730d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4d9d72e",
+   "id": "1ff5f356",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +78,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d899d61",
+   "id": "d913ba7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "profile = ProfileReport(crime, title=\"Pandas Profiling Report\")\n",
+    "profile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d305415",
    "metadata": {},
    "outputs": [],
    "source": []
