--- a/scrap_v2.ipynb
+++ b/scrap_v2.ipynb
@@ -346,7 +346,7 @@
     }
    ],
    "source": [
-    "stretch_starbucks = pd.DataFrame()\n",
+    "#stretch_starbucks = pd.DataFrame()\n",
     "stretch_starbucks['location'] = loc_names\n",
     "stretch_starbucks['address'] = loc_address\n",
     "stretch_starbucks"
