--- a/Mapping.ipynb
+++ b/Mapping.ipynb
@@ -138,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "davidson_poverty = davidson_poverty.rename(columns={\"Total Population for whom poverty status os determined- Estimate\":\"poverty_est\"})\n",
+    "davidson_poverty = davidson_poverty.rename(columns={\"Total Population for whom poverty status os determined- Estimate\":\"population\"})\n",
     "davidson_poverty.dropna()"
    ]
   },
@@ -172,7 +172,7 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(20,10))\n",
-    "davidson_poverty.plot(column = 'poverty_est', \n",
+    "davidson_poverty.plot(column = 'population', \n",
     "              cmap = 'GnBu', \n",
     "              edgecolor = 'black', \n",
     "              legend = True, \n",
@@ -187,10 +187,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "davidson_poverty.plot(column = 'poverty_est', \n",
+    "davidson_poverty.plot(column = 'population', \n",
     "cmap = 'GnBu', \n",
     "edgecolor = 'black', \n",
     "legend = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c4b433e",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "davidson_loc.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a9fb2f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "davidson_poverty['population'].max()"
    ]
   },
   {
@@ -201,39 +223,96 @@
    "outputs": [],
    "source": [
     "#Bring in crime data\n",
-    "crime = pd.read_csv('../data/police_incidents.csv')\n",
-    "crime.head()"
+    "crime = pd.read_csv('./data/zip_crime.csv')\n",
+    "#bring in zips\n",
+    "zipcodes = gpd.read_file('./data/zipcodes.geojson')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9959cea9",
-   "metadata": {},
+   "id": "c88ec6cb",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "#metro_crime = gpd.read_file('..\\data\\metro_crime.geojson')\n",
-    "#metro_crime.head()"
+    "crime.rename(columns={'zip_code':'zip', 'incident_number':'incident_count'}, inplace=True)\n",
+    "crime = crime[['zip', 'incident_count']]\n",
+    "crime = crime.dropna()\n",
+    "crime.info()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c4b433e",
-   "metadata": {},
+   "id": "b970dc1f",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "davidson_loc.head()"
+    "zipcodes = zipcodes.dropna()\n",
+    "zipcodes['zip'] = zipcodes['zip'].astype(int)\n",
+    "zipcodes.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a9fb2f7",
+   "id": "997c55c6",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "zip_crime = pd.merge(zipcodes, crime, on = \"zip\", how = \"inner\")\n",
+    "zip_crime = zip_crime.dropna()\n",
+    "zip_crime.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f3e5f01",
    "metadata": {},
    "outputs": [],
    "source": [
-    "davidson_poverty['poverty_est'].max()"
+    "category = []\n",
+    "\n",
+    "for index, row in zip_crime.iterrows():\n",
+    "    if row.incident_count >= 36375:\n",
+    "        category.append('High Crime')\n",
+    "    elif row.incident_count < 36375 and row.incident_count > 18188:\n",
+    "        category.append('Med Crime')\n",
+    "    else:\n",
+    "        category.append('Low Crime')\n",
+    "        \n",
+    "zip_crime['crime_level'] = category        \n",
+    "zip_crime.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d59b86a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "starbucks = pd.read_csv('./data/starbucks_markers.csv')\n",
+    "starbucks = starbucks.dropna()\n",
+    "other_locs = pd.read_csv('./data/final_locs.csv')\n",
+    "len(other_locs)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38b3207a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aunts_house = pd.read_csv('./data/Aunty_crib.csv')"
    ]
   },
   {
@@ -241,7 +320,7 @@
    "execution_count": null,
    "id": "743f5b85",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -253,7 +332,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "088c42ff",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "geoJson=davidson_loc.to_crs(epsg=4326).to_json()\n",
@@ -262,15 +343,95 @@
     "    geo_data =geoJson,                  #json\n",
     "    name ='choropleth',                  \n",
     "    data = davidson_poverty,                     \n",
-    "    columns = ['TRACTCE', 'poverty_est'], #columns to work on\n",
+    "    columns = ['TRACTCE', 'population'], #columns to work on\n",
     "    key_on ='feature.properties.TRACTCE',\n",
-    "    fill_color ='YlGnBu',     #I passed colors Yellow,Green,Blue\n",
+    "    fill_color ='YlOrBr',     #I passed colors Yellow,Green,Blue\n",
     "    fill_opacity = 0.7,\n",
     "    line_opacity = 0.2,\n",
-    "    legend_name = \"Total Population for whom poverty status is determined- Estimate\"\n",
+    "    legend_name = \"Total Population Est\"\n",
     ").add_to(m)\n",
     "\n",
+    "#testing \n",
+    "for i in range(0,len(starbucks)):\n",
+    "   folium.Marker(\n",
+    "      location=[starbucks.iloc[i]['latitude'], starbucks.iloc[i]['longitude']],\n",
+    "      popup=starbucks.iloc[i]['location'],\n",
+    "   ).add_to(m)\n",
+    "\n",
+    "folium.LayerControl().add_to(m)\n",
     "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e51c045b",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "n = folium.Map(location = [36.174465, -86.767960], zoom_start=11, control_scale=True)\n",
+    "\n",
+    "folium.Choropleth(\n",
+    "    geo_data =geoJson,                  #json\n",
+    "    name ='choropleth',                  \n",
+    "    data = davidson_poverty,                     \n",
+    "    columns = ['TRACTCE', 'population'], #columns to work on\n",
+    "    key_on ='feature.properties.TRACTCE',\n",
+    "    fill_color ='YlOrBr',     #I passed colors Yellow,Green,Blue\n",
+    "    fill_opacity = 0.7,\n",
+    "    line_opacity = 0.2,\n",
+    "    legend_name = \"Total Population Est\"\n",
+    ").add_to(n)\n",
+    "\n",
+    "folium.Choropleth(\n",
+    "    geo_data =zipcodes,                  #json\n",
+    "    name ='choropleth',                  \n",
+    "    data = zip_crime,                     \n",
+    "    columns = ['zip', 'incident_count'], #columns to work on\n",
+    "    key_on ='feature.properties.zip',\n",
+    "    fill_color ='Reds',     #I passed colors Yellow,Green,Blue\n",
+    "    fill_opacity = 0.7,\n",
+    "    line_opacity = 0.2,\n",
+    "    legend_name = \"Crime by incident count\"\n",
+    ").add_to(n)\n",
+    "\n",
+    "for i, r in starbucks.iterrows():\n",
+    "    loc = [r['latitude'],r['longitude']]\n",
+    "    pop = str(r['location'])\n",
+    "    icon=folium.Icon(color=\"green\",icon=\"fa-coffee\", prefix='fa')\n",
+    "    \n",
+    "    marker = folium.Marker(\n",
+    "        location = loc, \n",
+    "        popup = pop, icon = icon).add_to(n)\n",
+    "\n",
+    "for i, r in other_locs.iterrows():\n",
+    "    loc = [r['lat'],r['lon']]\n",
+    "    pop = str(r['location'])\n",
+    "    icon=folium.Icon(color=\"green\",icon=\"fa-coffee\", prefix='fa')\n",
+    "    \n",
+    "    marker = folium.Marker(\n",
+    "        location = loc, \n",
+    "        popup = pop, icon = icon).add_to(n)   \n",
+    "\n",
+    "folium.Marker(location=[36.23314,-86.76915], popup = 'Aunts House',\n",
+    "             icon=folium.Icon(color='blue', icon=\"fa-home\", prefix='fa')).add_to(n)\n",
+    "folium.CircleMarker(location=(36.23314,-86.76915),radius=15, fill_color='green').add_to(n)\n",
+    "    \n",
+    "folium.LayerControl().add_to(n)\n",
+    "#folium.GeoJson(data=zip_crime['geometry']).add_to(n)\n",
+    "n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c30677a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n.save(\"index.html\")"
    ]
   },
   {
@@ -288,6 +449,7 @@
     "    geo_j = folium.GeoJson(data=geo_j,\n",
     "                           style_function=lambda x: {'fillColor': 'orange'})\n",
     "    geo_j.add_to(m)\n",
+    "\n",
     "    \n",
     "m"
    ]
@@ -295,15 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "997c55c6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "21ab3de4",
+   "id": "bb304109",
    "metadata": {},
    "outputs": [],
    "source": []
