--- a/Mapping.ipynb
+++ b/Mapping.ipynb
@@ -225,22 +225,43 @@
     "#Bring in crime data\n",
     "crime = pd.read_csv('./data/zip_crime.csv')\n",
     "#bring in zips\n",
-    "zipcodes = gpd.read_file('./data/zipcodes.geojson')"
+    "zipcodes = gpd.read_file('./data/zipcodes.geojson')\n",
+    "\n",
+    "#bring in top and bottom zip info\n",
+    "top_bottom = pd.read_csv('./data/zip_info.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a816ece4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_bottom.groupby('top_bottom')['store_count'].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aadf8553",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "c88ec6cb",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "crime.rename(columns={'zip_code':'zip', 'incident_number':'incident_count'}, inplace=True)\n",
     "crime = crime[['zip', 'incident_count']]\n",
     "crime = crime.dropna()\n",
-    "crime.info()"
+    "crime"
    ]
   },
   {
@@ -254,7 +275,7 @@
    "source": [
     "zipcodes = zipcodes.dropna()\n",
     "zipcodes['zip'] = zipcodes['zip'].astype(int)\n",
-    "zipcodes.head()"
+    "zipcodes"
    ]
   },
   {
@@ -268,14 +289,17 @@
    "source": [
     "zip_crime = pd.merge(zipcodes, crime, on = \"zip\", how = \"inner\")\n",
     "zip_crime = zip_crime.dropna()\n",
-    "zip_crime.head()"
+    "print(type(zip_crime))\n",
+    "zip_crime.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "8f3e5f01",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "category = []\n",
@@ -289,7 +313,89 @@
     "        category.append('Low Crime')\n",
     "        \n",
     "zip_crime['crime_level'] = category        \n",
-    "zip_crime.head()"
+    "zip_crime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d1f92b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zip_n_crime_only = zip_crime[['zip','crime_level', 'po_name']].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce2365f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zip_n_crime_only = zip_n_crime_only.drop_duplicates(subset=['zip'])\n",
+    "#zip_n_crime_only.to_csv('zip_n_crime_only.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38e1f40e",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "star_zips = pd.read_csv('./data/star_zips.csv')\n",
+    "star_zips"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dac26cbd",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "star_crime = pd.merge(star_zips,zip_n_crime_only, left_on='zipcodes',right_on='zip')\n",
+    "star_crime.to_csv('star_crime.csv')\n",
+    "star_crime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f66c6d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "star_crime.groupby('po_name')['location'].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a3463c4",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "star_crime.groupby('crime_level')['location'].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92c29455",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "by_zip = pd.DataFrame(star_crime.groupby('zipcodes')['location'].count())\n",
+    "by_zip = by_zip.reset_index()\n",
+    "by_zip.sort_values(by='location', ascending=False)"
    ]
   },
   {
@@ -299,6 +405,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#for markers\n",
     "starbucks = pd.read_csv('./data/starbucks_markers.csv')\n",
     "starbucks = starbucks.dropna()\n",
     "other_locs = pd.read_csv('./data/final_locs.csv')\n",
@@ -312,7 +419,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aunts_house = pd.read_csv('./data/Aunty_crib.csv')"
+    "\n",
+    "aunts_house = pd.read_csv('./data/Aunty_crib.csv')\n",
+    "aunts_house"
    ]
   },
   {
@@ -479,7 +588,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
