--- a/scrap_v2.ipynb
+++ b/scrap_v2.ipynb
@@ -2,10 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "97e05556",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'selenium'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m \n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mselenium\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m webdriver\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mselenium\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mwebdriver\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msupport\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mui\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m WebDriverWait\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mselenium\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mwebdriver\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcommon\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mby\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m By\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'selenium'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd \n",
     "from selenium import webdriver\n",
@@ -282,10 +294,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f2ca7bb",
-   "metadata": {
-    "scrolled": true
-   },
+   "id": "696a2d8f",
+   "metadata": {},
    "outputs": [],
    "source": [
     "big_soup"
@@ -301,14 +311,16 @@
     "loc_name = big_soup[0].findAll('h1', attrs = {'class' : \"sb-heading text-lg text-bold pr7 mb1\"})\n",
     "loc_name\n",
     "loc_street = big_soup[0].findAll('span', attrs = {'class' : \"block\"})\n",
-    "loc_street[0]\n"
+    "loc_street[1]\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "7e9edeb4",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "#pull out information\n",
@@ -329,33 +341,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "8e0a7caa",
+   "execution_count": null,
+   "id": "0eaf68d1",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_23864\\1945022446.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mstretch_starbucks\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mstretch_starbucks\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'location'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mloc_names\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mstretch_starbucks\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'address'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mloc_address\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mstretch_starbucks\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#stretch_starbucks = pd.DataFrame()\n",
-    "stretch_starbucks['location'] = loc_names\n",
-    "stretch_starbucks['address'] = loc_address\n",
-    "stretch_starbucks"
+    "len(loc_address[0])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a325ff62",
+   "id": "c3acdbf1",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "zips = []\n",
+    "\n",
+    "for lst in loc_address:\n",
+    "    if len(lst) == 2:\n",
+    "        z = lst[1]\n",
+    "        zips.append(z)\n",
+    "    elif len(lst) == 3:\n",
+    "        z = lst[2]\n",
+    "        zips.append(z)\n",
+    "\n",
+    "zips"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f82f4715",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "starbucks_zips = pd.read_csv('./data/starbucks_almost.csv')\n",
+    "starbucks_zips['zipcodes'] = zips\n",
+    "starbucks_zips['zipcodes'] = starbucks_zips['zipcodes'].astype(str)\n",
+    "starbucks_zips['zipcodes'] = starbucks_zips['zipcodes'].str.extract('(\\d{5})')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26d599fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "starbucks_zips.to_csv('star_zips.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4cc8238",
    "metadata": {},
    "outputs": [],
    "source": []
